# resurfacing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  license
libs/imgui/: CmakeLists.txt
shaders/: common.glsl  lods.glsl  shaderInterface.h  shading.glsl  stdPerVertexMesh.glsl
shaders/halfEdges/: HE_def.glsl  halfEdge.mesh  halfedge.frag
shaders/parametric/: parametric.frag  parametric.glsl  parametric.mesh  parametric.task  parametricGrids.glsl  parametricSurfaces.glsl
shaders/pebbles/: pebble.frag  pebble.glsl  pebble.mesh  pebble.task  pebble_helper.glsl
shaders/utils/: compression.glsl  default.frag
src/: AppRessources.cpp  AppRessources.hpp  GLTFLoader.hpp  HalfEdge.hpp  ObjLoader.hpp  camera.cpp  camera.hpp  config.hpp  defines.hpp  libImplems.cpp  main.cpp  renderer.cpp  renderer.hpp  vkHelper.hpp
src/loaders/: GLTFLoader.cpp  GLTFLoader.hpp  ObjLoader.cpp  ObjLoader.hpp
